src/options/options.scss
body,
html {
    height: 100%;
    margin: 0;
    font-family: Arial, sans-serif;
}

#app {
    --min-cell-size: 200px;
    --subpage-animation-duration: 1s;
    --hover-animation-duration: 0.3s;
}

#grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(var(--min-cell-size), 1fr));
    width: 100%;
}

.cell {
    box-sizing: border-box;
    padding: 5%;
    margin: 0;
    border: 1px solid black;
    box-shadow: 0 0 10px inset;
    background-color: var(--subtool-color);
    transition: all var(--subpage-animation-duration);

    .cell-content {
        position: relative;
        display: flex;
        flex-direction: column;
        z-index: 2;

        & > * {
            margin: auto;
        }
    }

    &:not(.subpage) {
        aspect-ratio: 1/1;
        user-select: none;
        position: relative;

        &:has(.toggle-switch input:checked) {
            cursor: pointer;
        }

        .cell-content {
            width: 100%;
            height: 100%;
        }
    }

    &.subpage {
        overflow: auto;
        width: 100%;
        height: 100%;
        z-index: 10;
        top: 0;
        left: 0;
        padding: 20px;
    }

    .subtool-icon {
        height: 50%;
    }

    .subtool-name {
        color: var(--text-color);
        font-weight: bold;
        font-size: 2vw;
        text-align: center;
        white-space: nowrap;
        width: fit-content;
    }

    /* START: The hover darkening effect */

    .subpage-content {
        color: var(--text-color);

        // Prevent the hover overlay from ending up on top of the subpage contents
        position: relative;
        z-index: 2;
    }

    .hover-overlay {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.2));
        opacity: 0; // The hover overlay starts hidden
        z-index: 1;

        &.hover-animation-active {
            // The transition for the hover overlay is only active when the .hover-animation-active class is present,
            // which lets us instantly set the initial opacity in the cloned subpage cell without it animating
            // (jQuery then handles fading it out over the duration of the subpage animation)
            transition: opacity var(--hover-animation-duration);
        }

        .settings-icon {
            position: absolute;
            top: 2%;
            right: 2%;
            width: 8%;
            aspect-ratio: 1/1;
            user-select: none;
            transition: transform var(--hover-animation-duration) ease, opacity var(--hover-animation-duration) ease;
            transform-origin: center;
            filter: brightness(0);
            opacity: 0.2;
        }
    }

    &:hover .hover-overlay.hover-animation-active {
        // When you hover over a cell with an active hover animation, the overlay becomes visible, darkening the background.
        // This does not happen for the subpage, since we remove the .hover-animation-active class before the subpage animation starts.
        opacity: 1;

        .settings-icon {
            transform: scale(1.1) rotate(90deg);
            opacity: 0.3;
        }
    }

    /* END: The hover darkening effect */
}

// The first time installation modal
.first-time-install-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1000;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: min(4vh, 6vw);

    .first-time-install-modal {
        max-width: 80%;
        background-color: #494949;
        color: white;
        border-radius: 8px;
        padding: 20px;
        box-sizing: border-box;
        position: relative;

        button {
            padding: 10px 20px;
            cursor: pointer;
            align-self: center;
            background-color: black;
            color: white;
            border: none;
            border-radius: 5px;
            font: 6vh/1.5 "Roboto Condensed", sans-serif;
            position: relative;
            left: 50%;
            transform: translateX(-50%);
        }

        h2 {
            text-align: center;
            font-size: min(8vh, 12vw);
            margin-top: 0;
            margin-bottom: 0;
        }

        ol {
            padding-inline-start: min(6vh, 8vw);
        }
    }
}

